Switch to using Clang's AST. This is mainly because there are some ugly hacks that need to be done to correctly display vector expressions and GEP's and those depend on whether or not casts are displayed. This is just asking for trouble in the long run because the stringification, output options and IR parsing all get mixed together. This also stopped being an LLVM pass because of the wretched double definition problem caused by LLVM's CommandLine library. I never did figure out where the problem was but linking Clang and LLVM together seemed to cause it consistently. So now it's a standalone tool - which is probably better because I might be able to write simple C/C++ compiler wrappers based on this so the input doesn't have to be an LLVM IR file.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,23 +1,14 @@
 set(SOURCES
-  ASTBase.cpp
-  Context.cpp
-  CishPreparePass.cpp
-  CishPass.cpp
-  Decl.cpp
-  Expr.cpp
-  For.cpp
-  If.cpp
+  cish.cpp
+  CishContext.cpp
+  # CishPreparePass.cpp
+  DIParser.cpp
+  LLVMParser.cpp
   LLVMUtils.cpp
   Printer.cpp
-  Stmt.cpp
-  Type.cpp
-  While.cpp)
+  Stream.cpp)
 
-set(CISH_LIBNAME Cish)
-
-# Don't need to link any of the LLVM libraries because this is meant to be
-# used with LLVM's opt tool and that will have all the libraries linked
-# Linking LLVM here anyway will result in duplicate definition errors
-# from LLVM's commandline libraries which has a lot of global static stuff
-# in header files
-add_library(${CISH_LIBNAME} SHARED ${SOURCES})
+set(CISH cish)
+add_executable(${CISH} ${SOURCES})
+target_link_directories(${CISH} PUBLIC ${LLVM_LIBRARY_DIR} ${Clang_DIR})
+target_link_libraries(${CISH} clangAST clangBasic LLVM)
