Better file names and saner separation. Grouping things so if this ever supports GCC, it may work reasonably

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,11 @@
 set(SOURCES
   cish.cpp
+  BackendBase.cpp
   CishContext.cpp
   ClangUtils.cpp
   # CishPreparePass.cpp
   DIParser.cpp
+  LLVMBackend.cpp
   LLVMParser.cpp
   LLVMUtils.cpp
   Printer.cpp
