Add simple driver. Handle alloca's and GEP's correctly. Add separate vector operators. Better formatting

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,12 @@ message(STATUS "Include dirs: " ${LLVM_INCLUDE_DIR} ${CLANG_INCLUDE_DIRS})
 message(STATUS "Library dirs: " ${LLVM_LIBRARY_DIR} ${Clang_DIR})
 
 add_definitions(${LLVM_DEFINITIONS} ${CLANG_DEFINITIONS})
-add_compile_options(-Wall -Wextra -Wno-unused-parameter)
+add_compile_options(-std=c++17 -Wall -Wextra -Wno-unused-parameter)
 include_directories(${LLVM_INCLUDE_DIR} ${CLANG_INCLUDE_DIRS})
 set(CMAKE_BUILD_RPATH ${LLVM_LIBRARY_DIR} ${Clang_DIR})
 set(CMAKE_INSTALL_RPATH ${LLVM_LIBRARY_DIR} ${Clang_DIR})
 
+set(CMAKE_PROJECT_BINDIR "${PROJECT_BINARY_DIR}/bin")
+
+add_subdirectory(drivers)
 add_subdirectory(src)
