--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,7 @@ set(SOURCES
   # CishPreparePass.cpp
   Diagnostics.cpp
   DIParser.cpp
+  FormatOptions.cpp
   LLVMBackend.cpp
   LLVMParser.cpp
   LLVMUtils.cpp
@@ -16,3 +17,6 @@ set(CISH cish)
 add_executable(${CISH} ${SOURCES})
 target_link_directories(${CISH} PUBLIC ${LLVM_LIBRARY_DIR} ${Clang_DIR})
 target_link_libraries(${CISH} clangAST clangBasic LLVM)
+set_target_properties(${CISH}
+  PROPERTIES
+  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_PROJECT_BINDIR})
