Pass-ify everything. Had to do it because I can't get a hold of any of LLVM's analysis passes without it. The irony is that I don't know if I will actually use the LLVM passes anyway

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,13 +2,15 @@ set(SOURCES
   cish.cpp
   BackendBase.cpp
   CishContext.cpp
+  CishFunctionPass.cpp
+  CishModulePass.cpp
   ClangUtils.cpp
   # CishPreparePass.cpp
   Diagnostics.cpp
-  DIParser.cpp
+  SourceInfo.cpp
   FormatOptions.cpp
   LLVMBackend.cpp
-  LLVMParser.cpp
+  LLVMFrontend.cpp
   LLVMUtils.cpp
   Printer.cpp
   Stream.cpp)
