Force LLVM and Clang includes to be considered system includes to prevent warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,15 @@ message(STATUS "Include dirs: " ${LLVM_INCLUDE_DIR} ${CLANG_INCLUDE_DIRS})
 message(STATUS "Library dirs: " ${LLVM_LIBRARY_DIR} ${Clang_DIR})
 
 add_definitions(${LLVM_DEFINITIONS} ${CLANG_DEFINITIONS})
-add_compile_options(-std=c++17 -Wall -Wextra -Wno-unused-parameter -pedantic)
-include_directories(${LLVM_INCLUDE_DIR} ${CLANG_INCLUDE_DIRS})
+add_compile_options(-std=c++17 -Wall -Wextra)
+
+# Not sure if this is a problem with Flang's LLVM or LLVM/Clang more generally
+# but it produces an enormous number of warnings when compiling with -Wall
+# and -Wextra. So treat all LLVM/Clang headers as system headers
+# even if they are included from a non-system directory. This causes GCC/Clang
+# to suppress any warnings that they generate
+add_compile_options(-isystem ${LLVM_INCLUDE_DIR} -isystem ${CLANG_INCLUDE_DIRS})
+
 set(CMAKE_BUILD_RPATH ${LLVM_LIBRARY_DIR} ${Clang_DIR})
 set(CMAKE_INSTALL_RPATH ${LLVM_LIBRARY_DIR} ${Clang_DIR})
 
