Bug fix and smarter parenthetization based on operator precedence

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,6 +32,7 @@ set(SOURCES
   LLVMUtils.cpp
   Logging.cpp
   NameGenerator.cpp
+  Operators.cpp
   Options.cpp
   ParentMap.cpp
   StructureTree.cpp
